Added JUnit to the project and test for skill class. Closes #21, closes #22